# bevy-jam-6

./: Cargo.toml  build-wasm.nu  logo.afphoto
.github/workflows/: ci.yaml  release.yaml
src/: main.rs  state_management.rs
src/components/: ai.rs  death.rs  effects.rs  mod.rs  spawner.rs  stats.rs  tags.rs  ui.rs  utils.rs  weapons.rs
src/plugins/: death.rs  drops.rs  effects.rs  enemies.rs  game.rs  game_over.rs  health.rs  hooks.rs  main_menu.rs  mod.rs  player.rs  projectiles.rs  spawner.rs  types.rs  ui.rs  utils.rs  weapons.rs
src/resources/: audio.rs  effects.rs  mod.rs  utils.rs
