[package]
name = "bevy-jam-6"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
bevy_rapier2d = { version = "0.30.0", features = ["simd-stable"] }
bevy = "0.16"
bevy-inspector-egui = "0.31.0"
iyes_perf_ui = "0.5.0"

[features]
default = ["dev_native"]
dev = [
	# Improve compile times for dev builds by linking Bevy as a dynamic library.
	"bevy/dynamic_linking",
	"bevy/bevy_dev_tools",
	"bevy/bevy_ui_debug",
	# Improve error messages coming from Bevy
	"bevy/track_location",
]
dev_native = [
	"dev",
	# Enable asset hot reloading for native dev builds.
	"bevy/file_watcher",
	# Enable embedded asset hot reloading for native dev builds.
	"bevy/embedded_watcher",
]

[lints.clippy]
# Bevy supplies arguments to systems via dependency injection, so it's natural for systems to
# request more than 7 arguments, which would undesirably trigger this lint.
too_many_arguments = "allow"
# Queries may access many components, which would undesirably trigger this lint.
type_complexity = "allow"
# Make sure macros use their standard braces, such as `[]` for `bevy_ecs::children!`.
nonstandard_macro_braces = "warn"
# That's dumb
needless_return = "allow"

[package.metadata.bevy_cli.release]
# Disable dev features for release builds.
default-features = false

[package.metadata.bevy_cli.web]
# Disable native features for web builds.
default-features = false

[package.metadata.bevy_cli.web.dev]
features = ["dev"]

# Compile with Performance Optimizations:
# <https://bevyengine.org/learn/quick-start/getting-started/setup/#compile-with-performance-optimizations>

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

# Remove expensive debug assertions due to <https://github.com/bevyengine/bevy/issues/14291>
[profile.dev.package.wgpu-types]
debug-assertions = false

[profile.release]
# Compile the entire crate as one unit.
# Slows compile times, marginal improvements.
codegen-units = 1
# Do a second optimization pass over the entire program, including dependencies.
# Slows compile times, marginal improvements.
lto = "thin"

# This profile will be used by `bevy run web` automatically.
[profile.web-release]
# Default to release profile values.
inherits = "release"
# Optimize with size in mind (also try "z", sometimes it is better).
# Slightly slows compile times, great improvements to file size and runtime performance.
opt-level = "s"
# Strip all debugging information from the binary to slightly reduce file size.
strip = "debuginfo"

# Optimize for build time in CI.
[profile.ci]
inherits = "dev"
opt-level = 0
debug = "line-tables-only"
codegen-units = 4

[profile.ci.package."*"]
opt-level = 0
